// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package ec2;

option go_package = "waypoint/builtin/aws/ec2";

message Deployment {
  string service_name = 1;
  string region = 2;
  string public_ip = 3;
  string public_dns = 4;
  string target_group_arn = 5;
}
